# goliat

./: .bashrc  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CLONE.md  CNAME  CODE_OF_CONDUCT.md  COLORING_RULES.md  CONTRIBUTING.md  GUI_Responsiveness_Issue.md  LICENSE  MAINTAINABILITY_IMPROVEMENT_STRATEGIES.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.3.0_DRAFT.md  S4L_projects.py  TECHNICAL_DEBT_REDUCTION_PLAN.md  TEST_DASHBOARD.md  adding_simulate_in_cloud.md  analysis.md  calculate_gridding.py  classes.puml  config.json  counter_analysis.md  diagnose_project_sizes.py  ersrwydaeghOneDrive - UGentrwydaeghGOLIAT codegoliat && git branch --show-current  far_field_concrete_todo.txt  final_refactoring_plan.md  fix_proposals.md  gui_feature_plan.md  index.html  inspect_antennas.py  issue_body.txt  licenses.py  log.txt  markdown_formatting_rules.md  material_name_mapping.json  (+34 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.qlty/: qlty.toml
COLORING_RULES/: index.html
GPU_speeds/: performance_data.csv  recreate_plot.py
SUPER_STUDIES/: index.html
advanced_features/: index.html
ai_models_literature_review_dec_2025/: index.html
analysis/: create_heatmap.py  manual_timing_data.csv  thelonious_FR3_analysis.py  timing_data.csv
api/: index.html
api_reference/: index.html
architecture_overview/: index.html
cli/: __init__.py  __main__.py  ascii_art.py  commands.py  generate_paper.py  run_ai.py  run_analysis.py  run_auto_induced.py  run_free_space_study.py  run_parallel_studies.py  run_study.py  run_super_study.py  run_worker.py  utils.py
cloud_setup/: connect_vpn.bat  deploy_windows_vm.py  gpu_dashboard.py  license_automation.py  setup.bat  setup_and_run.bat
configs/: ai_config.json  analysis.json  analysis_cdf_only.json  automatic_gridding_config.json  base_config.json  config_documentation.md  detuning_-10.json  detuning_-20.json  detuning_-40.json  detuning_-80.json  detuning_0.json  detuning_10.json  detuning_20.json  detuning_40.json  detuning_80.json  documentation.md  far_field_11GHz.json  far_field_11GHz_short.json  far_field_13GHz.json  far_field_13GHz_short.json  far_field_15GHz.json  far_field_15GHz_short.json  far_field_7GHz.json  far_field_7GHz_short.json  far_field_9GHz.json  far_field_9GHz_short.json  far_field_FR1_auto_induced_3500MHz.json  far_field_FR1_auto_induced_700MHz.json  far_field_FR1_auto_induced_base.json  far_field_FR3.json  far_field_FR3_1.json  far_field_FR3_2.json  far_field_FR3_3.json  far_field_FR3_FR2_environmental.json  far_field_FR3_barebones.json  far_field_FR3_base.json  far_field_FR3_short.json  far_field_config.json  far_field_multisine_test_harmonic.json  far_field_multisine_test_multisine.json  (+28 more)
configuration/: index.html
data/: .goliat_pricing.json  detuning_-10.json  detuning_-20.json  detuning_-40.json  detuning_-80.json  detuning_0.json  detuning_10.json  detuning_20.json  detuning_40.json  detuning_80.json  itis_v5.db  material_name_mapping.json  material_properties_cache.json
developer_guide/: classes.puml  index.html
docs/: COLORING_RULES.md  Far_Field_Expansion_Plan.md  GUI-Profiling-Logger.md  IMPROVED_ROADMAP.md  Near_Field_Symmetrization_Report.md  Performance_Analysis_and_Refactor_Proposal.md  README.md  ROADMAP.md  SUPER_STUDIES.md  advanced_features.md  ai_models_literature_review_dec_2025.md  api.md  api_reference.md  architecture_overview.md  classes.puml  cloud_simulation_guide.md  configuration.md  developer_guide.md  far_field_resume_logic_proposals.md  implementation_notes_cleanup.md  index.md  installation.md  packages_GOLIAT.puml  project_info.md  quick_start.md  refactoring_analysis_simulation_runner.md  refactoring_critical_concerns.md  refactoring_decisions_simulation_runner.md  refactoring_plan_simulation_runner.md  refactoring_questions_simulation_runner.md  resume_logic_brainstorm.md  smartphone_positioning.md  target_rotation_design.md  technical_guide.md  troubleshooting.md  uml.md  user_guide.md
far_field_resume_logic_proposals/: index.html
goliat/: __init__.py  antenna.py  colors.py  config.py  constants.py  data_extractor.py  gui_manager.py  logging_manager.py  metadata_exporter.py  profiler.py  project_manager.py  results_extractor.py  simulation_runner.py
hybridizer/: __init__.py  antenna.py  cluster.py  collection.py  exposure_simulation.py  grid.py  make_simulations.py  simulation.py  stochastic.py  time_domain_simulation.py  time_domain_simulation_windows.py
implementation_notes_cleanup/: index.html
installation/: index.html
javascripts/: ansi-to-html.js  code-block-enhancements.js
(+506 files in other folders)
